--- a/NEMLESSSTER/index.html
+++ b/NEMLESSSTER/index.html
@@ -37,10 +37,9 @@
         }
     </style>
     <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-    <script src="https://cdn.jsdelivr.net/gh/phi-jp/tmlib.js@0.3.0/build/tmlib.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/phina.js@0.2.3/build/phina.min.js'></script>
     <script src='enum.js'></script>
-    <script src='main.js?202105090356'></script>
+    <script src='main.js'></script>
 </head>
 
 <body>
